# signalswitch.lv2

./: CMakeLists.txt  README.md  manifest.ttl  signalswitch.ttl
resources/: manifest.ttl.in  signalswitch.ttl.in
src/: CMakeLists.txt  signalswitch_lv2.cpp
